# TRAIL24

./: .gitignore  README.md  api_access.py  app.py  download_model.ipynb  environment.yml  eval_pipeline.ipynb  ilp_encoding.ipynb  ilp_test.ipynb  paths.py  pgpr_reco_new_user.py  prompt_generation.ipynb  prompt_generation3.ipynb  prompt_generation_cot.ipynb  prompt_generation_zs.ipynb  pyproject.toml  pytest.ini  ratings_sample_dataset.xlsx  recommendation_flow_example.ipynb
backend/: init_functions.py  main.py  metadata_functions.py
frontend/: .gitignore  index.html
frontend/src/: App.vue  style.css  utils.js
frontend/src/components/: Modal.vue  Profile.vue  RecExplain.vue  SearchRate.vue
ilp_movie_recommendation/: add_new_user.py  coverage.py  ilp_encoding.ipynb  ilp_test.ipynb  learned_clauses.txt  logic_program_generation.py  ratings_dataset.xlsx  ratings_sample_dataset.xlsx  recommendation.py  requirement.txt  test.py
ilp_movie_recommendation/ilp_movie_recommendation/: data_processing.py  model_generation.py
metrics_alone/: beyond_accuracy_metrics.py  data_utils.py  eval_all_metrics.py  eval_paths.py  eval_utils.py  utility_metrics.py  utils.py
models/: cache_to_file.py  csv_loader.py  csv_row.py  mapping_factory.py
models/nodes/: fact.py  node.py
models/products/: product.py  product_factory.py  product_mapping_row.py  product_registry.py  product_row.py
models/ratings/: rating.py  rating_factory.py  rating_registry.py  rating_row.py
models/reco/: reco_factory.py  reco_node.py  reco_path.py  reco_rel.py
models/users/: user.py  user_factory.py  user_mapping_row.py  user_registry.py  user_row.py
new_user/: policy_model_epoch_50.ckpt  prepare_datasets_NU.py  train_agent_NU.py  train_transe_NU.py
recommendation/: registry_handler.py
recommendation/explainers/: abstract_explainer.py  cot_explainer.py  fact_explainer.py  llm_explainer.py
recommendation/explainers/traces/: cot_trace.py  llm_trace.py  (+1 more)
recommendation/facts/: fact_collector.py
recommendation/recommenders/: abstract_recommender.py  ilp_recommender.py  personalized_pagerank_recommender.py  random_recommender.py
tests/: test_csv_loader.py  test_csv_row.py  test_product_registry.py  test_rating_registry.py  test_reco_factory.py  test_user_registry.py
