[tool.poetry]
name = "trail24"
version = "0.1.0"
description = ""
authors = ["Martin Balfroid <martin.balfroid@unamur.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
tiktoken = "^0.6.0"
openai = "^1.25.0"
pandas = "^2.2.2"
ipytest = "^0.14.2"
pytest-cov = "^5.0.0"
mock-open = "^1.4.0"
pylint = "^3.2.2"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
langchainhub = "^0.1.16"
langchain-community = "^0.2.1"
huggingface-hub = "^0.23.2"
transformers = "^4.44.2"
torch = "^2.4.0"
sentencepiece = "^0.2.0"
protobuf = "^5.28.0"
accelerate = "^0.34.0"
langchain-huggingface = "^0.0.3"
bitsandbytes = "^0.43.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
