[tool.poetry]
name = "trail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.25.2"
scipy = "1.11.1"
pytorch = "2.0.1"
pandas = "2.2.0"
scikit-learn = "1.3.0"
matplotlib = "3.8.4"
tqdm = "4.65.0"
fastapi = "0.112.2"
uvicorn = "0.30.6"
gdown = "5.0.0"
easydict = "1.11"
pydantic = "1.10.12"
requests = "2.28.1"
typing-extensions = "4.12.2"
jinja2 = "3.1.2"
joblib = "1.2.0"
protobuf = "4.25.2"
wandb = "0.16.2"
setuptools = "68.0.0"
tzdata = "2023.4"
sentry-sdk = "1.39.2"
setproctitle = "1.3.3"
pyyaml = "6.0.1"
pyarrow = "16.1.0"
gitpython = "3.1.41"
docker-pycreds = "0.4.0"
starlette = "0.38.4"

# Add more dependencies as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
